cloud/k8s/backend/wordpress/components.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
        component: workload
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 4
        fsGroup: 33
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-pv-claim
      containers:
      - name: wordpress
        image: wordpress:6
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
spec:
  selector:
    app: wordpress
  type: ClusterIP
  ports:
  - name: tcp
    port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wordpress
  labels:
    app: wordpress
    component: route
spec:
  parentRefs:
  - name: web-gateway
    namespace: gateway-system
    sectionName: https
  hostnames:
  - "wordpress.jsx.jp"
  - "wordpress.x.jsx.jp"
  rules:
  - backendRefs:
    - name: wordpress
      port: 80
